# carla_vloc_benchmark

./: .dockerignore  .gitmodules  README.md  install_dependencies.sh
carla_vloc_benchmark/carla_visual_navigation/: package.xml  setup.cfg  setup.py
carla_vloc_benchmark/carla_visual_navigation/carla_visual_navigation/: crash_marker_pub_node.py  crash_monitor_node.py  filtered_visual_localizer_evaluator_node.py  geometry_utils.py  image_capture_node.py  path_tracking_sensor.py  place_recognition_evaluator_node.py  scenario_batch_executor_node.py  travelled_distance_sensor.py  vehicle_reinit_node.py  visual_localizer_evaluator_node.py  visual_navigator_evaluator_node.py
carla_vloc_benchmark/carla_visual_navigation/config/: GalleryCaptureTemplate.xosc  VisualNavigatorTemplate.xosc  objects.json  objects_noview.json  objects_test.json  visual_navigation_ros2.rviz
carla_vloc_benchmark/carla_visual_navigation/launch/: carla_gallery_capture.launch.py  carla_place_recognition_test.launch.py  carla_visual_localizer_test.launch.py  carla_visual_navigator_agent.launch.py  cli_scenario_runner.launch.py  rviz_scenario_runner.launch.py  scenario_executor.launch.py
carla_vloc_benchmark/carla_visual_navigation/scripts/: analyze_illumination_scenario_logs.py  analyze_scenario_logs.py  analyze_scenario_logs_filtered.py  analyze_viewpoint_yaw_scenario_logs.py  create_gallery_reconstructions.py  run_experiments.py  run_viewpoint_experiments.sh  scenario_parameters.py  scenario_parameters_new.py  template_scenario_creator.py
docker/: Dockerfile  build-carla.sh  run-bash-carla.sh  (+5 more)
(+93 files in other folders)
