<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_visual_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>
  
  <exec_depend>carla_ros_bridge</exec_depend>
  <exec_depend>carla_spawn_objects</exec_depend>
  <exec_depend>carla_waypoint_publisher</exec_depend>
  <exec_depend>carla_ad_agent</exec_depend>
  <exec_depend>carla_manual_control</exec_depend>
  <exec_depend>rviz_carla_plugin</exec_depend>
  <exec_depend>carla_twist_to_control</exec_depend>
  <exec_depend>carla_ros_scenario_runner</exec_depend>
  
  <build_depend>std_msgs</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visual_robot_localization</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
